Fix stuck hover states in draggable elements

--- a/packages/admin/src/styles/_layout.scss
+++ b/packages/admin/src/styles/_layout.scss
@@ -13,7 +13,7 @@
 }
 
 .dito-layout-horizontal {
-  > *:not(:first-child) {
+  > :not(:first-child) {
     padding-left: $form-spacing;
   }
 }
